--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Mini_Estacao_CSV/.venv/*
 Mini_Estacao_CSV/libraries/*
 Mini_Estacao_Relogio/libraries/*
 Mini_Estacao_Meterologica/libraries*
+
+./TODO.md
